# parse_trisigma

./: LICENSE  README.md  setup.cfg  setup.py
parse_trisigma/: parser.py
parse_trisigma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/raw_data/: Timika 23 Juni 2023 start trip 001.txt
