[metadata]
name = parse_trisigma
version = 0.1
author = Seyed Abbas Jazaeri
author_email = abja@dhigroup.com
description = Parse Reports from Trisigma
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abja-dhi/parse_trisigma
classifiers = 
    Programming Language :: Python :: 3
    License :: MIT License
    Operating System :: OS  Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
